<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/btnFbLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colGris"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colBleu"
        android:text="@string/stTwitter"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colBlanc" />

    <Button
        android:id="@+id/btnTwLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stTwLogin" 
        android:onClick="loginTwitter" />



    <Button
        android:id="@+id/btnTwLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/stTwLogout"
        android:onClick="logoutTwitter" />

</LinearLayout>