<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colGris"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvRechercheLibre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colBleu"
        android:paddingBottom="@dimen/dim05"
        android:paddingLeft="@dimen/dimPetit"
        android:paddingTop="@dimen/dim05"
        android:text="@string/tvRechercheLibre"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colBlanc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimPetit" >

        <SearchView
            android:id="@+id/svRechercheLibre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.46"
            android:focusable="false"
            android:iconifiedByDefault="false"
            android:queryHint="@string/stGuiderHint" >

        </SearchView>

    </LinearLayout>

    <TextView
        android:id="@+id/tvRechercheSpecialite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colBleu"
        android:paddingBottom="@dimen/dim05"
        android:paddingLeft="@dimen/dimPetit"
        android:paddingTop="@dimen/dim05"
        android:text="@string/tvRechercheSpecialite"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colBlanc" />

    <ExpandableListView
        android:id="@+id/elvRechercheSpecialite"
        android:layout_width="match_parent"
        android:layout_height="59dp" >
    </ExpandableListView>

    <TextView
        android:id="@+id/tvRechercheMotCle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colBleu"
        android:paddingBottom="@dimen/dim05"
        android:paddingLeft="@dimen/dimPetit"
        android:paddingTop="@dimen/dim05"
        android:text="@string/tvRechercheMotCle"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colBlanc" />

    <ExpandableListView
        android:id="@+id/elvRechercheMotCle"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ExpandableListView>

</LinearLayout>